<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:id="@+id/root"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.tungsten.fcllibrary.component.view.FCLTextView
        android:id="@+id/title"
        android:text="@string/account_skin"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/positive"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <com.tungsten.fcllibrary.skin.SkinCanvas
            android:id="@+id/skin_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:background="#CDDC39"
            app:layout_constraintStart_toEndOf="@+id/skin_view">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <com.tungsten.fcllibrary.component.view.FCLRadioButton
                    android:id="@+id/default_skin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_skin_type_default" />

                <com.tungsten.fcllibrary.component.view.FCLRadioButton
                    android:id="@+id/steve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_skin_type_steve" />

                <com.tungsten.fcllibrary.component.view.FCLRadioButton
                    android:id="@+id/alex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_skin_type_alex" />

                <com.tungsten.fcllibrary.component.view.FCLRadioButton
                    android:id="@+id/csl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_skin_type_csl_api" />

                <com.tungsten.fcllibrary.component.view.FCLRadioButton
                    android:id="@+id/local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_skin_type_local_file" />

                <com.tungsten.fcllibrary.component.view.FCLLinearLayout
                    android:id="@+id/local_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.tungsten.fcllibrary.component.view.FCLLinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.tungsten.fcllibrary.component.view.FCLTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:singleLine="true"
                            android:text="@string/account_skin" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <com.tungsten.fcllibrary.component.view.FCLImageButton
                            android:id="@+id/skin_path"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_baseline_edit_24"
                            app:auto_tint="true"
                            app:no_padding="true" />

                    </com.tungsten.fcllibrary.component.view.FCLLinearLayout>

                    <com.tungsten.fcllibrary.component.view.FCLTextView
                        android:id="@+id/skin_path_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:singleLine="true" />

                    <com.tungsten.fcllibrary.component.view.FCLLinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.tungsten.fcllibrary.component.view.FCLTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:singleLine="true"
                            android:text="@string/account_cape" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <com.tungsten.fcllibrary.component.view.FCLImageButton
                            android:id="@+id/cape_path"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_baseline_edit_24"
                            app:auto_tint="true"
                            app:no_padding="true" />

                    </com.tungsten.fcllibrary.component.view.FCLLinearLayout>

                    <com.tungsten.fcllibrary.component.view.FCLTextView
                        android:id="@+id/cape_path_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:singleLine="true" />

                </com.tungsten.fcllibrary.component.view.FCLLinearLayout>

                <com.tungsten.fcllibrary.component.view.FCLLinearLayout
                    android:id="@+id/csl_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.tungsten.fcllibrary.component.view.FCLTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_container_white"
                        android:padding="10dp"
                        android:text="@string/account_skin_type_csl_api_hint"
                        android:textSize="13sp"
                        app:auto_text_background_tint="true"
                        app:auto_text_tint="true" />

                    <com.tungsten.fcllibrary.component.view.FCLEditText
                        android:id="@+id/csl_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/account_skin_type_csl_api_location_hint"
                        android:singleLine="true"
                        android:textSize="13sp" />

                </com.tungsten.fcllibrary.component.view.FCLLinearLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.tungsten.fcllibrary.component.view.FCLButton
        android:id="@+id/positive"
        android:text="@string/dialog_positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.tungsten.fcllibrary.component.view.FCLButton
        android:id="@+id/negative"
        android:text="@string/dialog_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>